# pyautogui

./: .gitignore  main.py  pyproject.toml  setup.py  test.py  tox.ini
pyautogui/: __init__.py  _pyautogui_wayland.py
tests/: test_pyautogui.py
