[project]
name = "pyautogui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.1.0",
    "pyscreenshot>=3.1",
    "pyscreeze>=1.0.1",
    "python-ydotool>=1.1.0",
    "pytweening>=1.2.0",
    "wayland-automation>=0.2.1",
]
